--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-Hello world! This is SQ!
+<!doctype html>
+<html class="no-js" lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>Smoothsquid</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="theme-color" content="#ffffff">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/style.css">
+	</head>
+
+	<body>
+		<img src="img/smooth-squid-logo.png" alt="Smoothsquid">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 col-xl-3">
+					<a href="shop/hungry-gull/"><img src="img/HungryGull.jpg"></a>
+				</div>
+				<div class="col-md-6 col-xl-3">
+					<a href="shop/taiko-space-at-mount-fuji/"><img src="img/the-taiko-space-mount-fuji-tees-2017.jpg"></a>
+				</div>
+				<div class="col-md-6 col-xl-3">
+					<a href="shop/taiko-space-x/"><img src="img/the-taiko-space-x-smooth-squid-t-shirt-tees-2017.jpg"></a>
+				</div>
+				<div class="col-md-6 col-xl-3">
+					<a href="shop/octopus/"><img src="img/smooth-squid-octopus-sailor-tee.jpg"></a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-xl-3">
+					<a href="shop/skateboarding-is-holy/"><img src="img/skateboarding-is-holy-smooth-squid.jpg"></a>
+				</div>
+				<div class="col-md-6 col-xl-3">
+					<a href="shop/long-hair-dont-care/"><img src="img/long-hair-dont-care_NL-6200.jpg"></a>
+				</div>
+				<div class="col-md-6 col-xl-3">
+					<a href="shop/leather-girl/"><img src="img/leather-coat_mockup_Front_Flat_Tri-Cranberry.png"></a>
+				</div>
+				<div class="col-md-6 col-xl-3">
+					<a href="shop/staring-girl/"><img src="img/staring-girl_mockup_Front_Flat_Tri-Cranberry.png"></a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-xl-3">
+					<a href="shop/will-riker-whut/"><img src="img/william-riker_mockup_Front_Flat_Tri-Cranberry.png"></a>
+				</div>
+				<div class="col-md-6 col-xl-3">
+					<a href="shop/aloha-the-cat/"><img src="img/aloha-the-cat-minouchon_mockup_Front_Flat_Tri-Evergreen.png"></a>
+				</div>
+				<div class="col-md-6 col-xl-3">
+					<a href="shop/sunset-girl/"><img src="img/sunset-girl_mockup_Front_Flat_Tri-Coffee.png"></a>
+				</div>
+				<div class="col-md-6 col-xl-3">
+					<a href="shop/surfer-girl/"><img src="img/surfer-firl_mockup_Front_Flat_Tri-Evergreen.png"></a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-xl-3">
+					<a href="shop/head-set-girl/"><img src="img/headphone-girl-NL-6200.jpg"></a>
+				</div>
+			</div>
+		</div>
+	</body>
+
+</html>
