--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<img src="img/smooth-squid-logo.png" alt="Smoothsquid">
 		<div class="container">
-			<div class="row">
+			<div class="row mb-3">
 				<div class="col-md-6 col-xl-3">
 					<a href="shop/hungry-gull/"><img src="img/HungryGull.jpg"></a>
 				</div>
@@ -26,7 +26,7 @@
 					<a href="shop/octopus/"><img src="img/smooth-squid-octopus-sailor-tee.jpg"></a>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row mb-3">
 				<div class="col-md-6 col-xl-3">
 					<a href="shop/skateboarding-is-holy/"><img src="img/skateboarding-is-holy-smooth-squid.jpg"></a>
 				</div>
@@ -40,7 +40,7 @@
 					<a href="shop/staring-girl/"><img src="img/staring-girl_mockup_Front_Flat_Tri-Cranberry.png"></a>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row mb-3">
 				<div class="col-md-6 col-xl-3">
 					<a href="shop/will-riker-whut/"><img src="img/william-riker_mockup_Front_Flat_Tri-Cranberry.png"></a>
 				</div>
@@ -54,7 +54,7 @@
 					<a href="shop/surfer-girl/"><img src="img/surfer-firl_mockup_Front_Flat_Tri-Evergreen.png"></a>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row mb-3">
 				<div class="col-md-6 col-xl-3">
 					<a href="shop/head-set-girl/"><img src="img/headphone-girl-NL-6200.jpg"></a>
 				</div>
