--- a/shop/staring-girl/index.html
+++ b/shop/staring-girl/index.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-		<img src="../../img/smooth-squid-logo.png" alt="Smoothsquid">
+		<a href="../../"><img src="../../img/smooth-squid-logo.png" alt="Smoothsquid"></a>
 		<div class="container">
 			<img src="../../img/staring-girl_mockup_Front_Flat_Tri-Cranberry.png">
 		</div>
