--- a/shop/taiko-space-at-mount-fuji/index.html
+++ b/shop/taiko-space-at-mount-fuji/index.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-		<img src="../../img/smooth-squid-logo.png" alt="Smoothsquid">
+		<a href="../../"><img src="../../img/smooth-squid-logo.png" alt="Smoothsquid"></a>
 		<div class="container">
 			<img src="../../img/the-taiko-space-mount-fuji-tees-2017.jpg">
 		</div>
