--- a/shop/hungry-gull/index.html
+++ b/shop/hungry-gull/index.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-		<img src="../../img/smooth-squid-logo.png" alt="Smoothsquid">
+		<a href="../../"><img src="../../img/smooth-squid-logo.png" alt="Smoothsquid"></a>
 		<div class="container">
 			<img src="../../img/HungryGull.jpg">
 		</div>
