--- a/shop/surfer-girl/index.html
+++ b/shop/surfer-girl/index.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-		<img src="../../img/smooth-squid-logo.png" alt="Smoothsquid">
+		<a href="../../"><img src="../../img/smooth-squid-logo.png" alt="Smoothsquid"></a>
 		<div class="container">
 			<img src="../../img/surfer-firl_mockup_Front_Flat_Tri-Evergreen.png">
 		</div>
