--- a/index.html
+++ b/index.html
@@ -12,50 +12,50 @@
 	<body>
 		<img src="img/smooth-squid-logo.png" alt="Smoothsquid">
 		<div class="container">
-			<div class="row mb-3">
-				<div class="col-md-6 col-xl-3">
+			<div class="row">
+				<div class="col-md-6 col-xl-3 mb-3">
 					<a href="shop/hungry-gull/"><img src="img/HungryGull.jpg"></a>
 				</div>
-				<div class="col-md-6 col-xl-3">
+				<div class="col-md-6 col-xl-3 mb-3">
 					<a href="shop/taiko-space-at-mount-fuji/"><img src="img/the-taiko-space-mount-fuji-tees-2017.jpg"></a>
 				</div>
-				<div class="col-md-6 col-xl-3">
+				<div class="col-md-6 col-xl-3 mb-3">
 					<a href="shop/taiko-space-x/"><img src="img/the-taiko-space-x-smooth-squid-t-shirt-tees-2017.jpg"></a>
 				</div>
-				<div class="col-md-6 col-xl-3">
+				<div class="col-md-6 col-xl-3 mb-3">
 					<a href="shop/octopus/"><img src="img/smooth-squid-octopus-sailor-tee.jpg"></a>
 				</div>
 			</div>
-			<div class="row mb-3">
-				<div class="col-md-6 col-xl-3">
+			<div class="row">
+				<div class="col-md-6 col-xl-3 mb-3">
 					<a href="shop/skateboarding-is-holy/"><img src="img/skateboarding-is-holy-smooth-squid.jpg"></a>
 				</div>
-				<div class="col-md-6 col-xl-3">
+				<div class="col-md-6 col-xl-3 mb-3">
 					<a href="shop/long-hair-dont-care/"><img src="img/long-hair-dont-care_NL-6200.jpg"></a>
 				</div>
-				<div class="col-md-6 col-xl-3">
+				<div class="col-md-6 col-xl-3 mb-3">
 					<a href="shop/leather-girl/"><img src="img/leather-coat_mockup_Front_Flat_Tri-Cranberry.png"></a>
 				</div>
-				<div class="col-md-6 col-xl-3">
+				<div class="col-md-6 col-xl-3 mb-3">
 					<a href="shop/staring-girl/"><img src="img/staring-girl_mockup_Front_Flat_Tri-Cranberry.png"></a>
 				</div>
 			</div>
-			<div class="row mb-3">
-				<div class="col-md-6 col-xl-3">
+			<div class="row">
+				<div class="col-md-6 col-xl-3 mb-3">
 					<a href="shop/will-riker-whut/"><img src="img/william-riker_mockup_Front_Flat_Tri-Cranberry.png"></a>
 				</div>
-				<div class="col-md-6 col-xl-3">
+				<div class="col-md-6 col-xl-3 mb-3">
 					<a href="shop/aloha-the-cat/"><img src="img/aloha-the-cat-minouchon_mockup_Front_Flat_Tri-Evergreen.png"></a>
 				</div>
-				<div class="col-md-6 col-xl-3">
+				<div class="col-md-6 col-xl-3 mb-3">
 					<a href="shop/sunset-girl/"><img src="img/sunset-girl_mockup_Front_Flat_Tri-Coffee.png"></a>
 				</div>
-				<div class="col-md-6 col-xl-3">
+				<div class="col-md-6 col-xl-3 mb-3">
 					<a href="shop/surfer-girl/"><img src="img/surfer-firl_mockup_Front_Flat_Tri-Evergreen.png"></a>
 				</div>
 			</div>
-			<div class="row mb-3">
-				<div class="col-md-6 col-xl-3">
+			<div class="row">
+				<div class="col-md-6 col-xl-3 mb-3">
 					<a href="shop/head-set-girl/"><img src="img/headphone-girl-NL-6200.jpg"></a>
 				</div>
 			</div>
