--- a/shop/will-riker-whut/index.html
+++ b/shop/will-riker-whut/index.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-		<a href="../../"><img src="../../img/smooth-squid-logo.png" alt="Smoothsquid"></a>
+		<a href="https://smoothsquid.com"><img src="../../img/smooth-squid-logo.png" alt="Smoothsquid"></a>
 		<div class="container">
 			<img src="../../img/william-riker_mockup_Front_Flat_Tri-Cranberry.png">
 		</div>
